objects/CMPL123QMS__Global_Change_Control__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Advance_Without_Assessment_Closure__c</fullName>
        <label>Advance Without Assessment Closure?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Affected_Materials__c</fullName>
        <label>Affected Materials</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Material 1</fullName>
                </value>
                <value>
                    <fullName>Material 2</fullName>
                </value>
                <value>
                    <fullName>Material 3</fullName>
                </value>
                <value>
                    <fullName>Material3</fullName>
                    <isActive>false</isActive>
                    <label>Material3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assigned_To_Me__c</fullName>
        <formula>CMPL123QMS__Assigned_To__c = $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assigned To Me?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Global_Change_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Auto_Close_Upon_Completion__c</fullName>
        <label>Auto-Close Upon Completion?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Change_Evaluation__c</fullName>
        <label>Change Evaluation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Current_State__c</fullName>
        <label>Current State</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Department__c</fullName>
        <label>Department</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CMPL123QMS__Department</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Device_Affected__c</fullName>
        <label>Device Affected?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Device_Comment__c</fullName>
        <label>Device Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Device_Lot_Number_s__c</fullName>
        <label>Device Lot Number(s)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Device_Number__c</fullName>
        <label>Device Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Device__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Device</label>
        <referenceTo>CMPL123__Device__c</referenceTo>
        <relationshipLabel>Global Change Controls</relationshipLabel>
        <relationshipName>Global_Change_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Document_Comment__c</fullName>
        <label>Document Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Documents_Affected__c</fullName>
        <label>Documents Affected?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Due_Date__c</fullName>
        <label>Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Equipment_Affected__c</fullName>
        <label>Equipment Affected?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Equipment_Comment__c</fullName>
        <label>Equipment Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Equipment_ID__c</fullName>
        <label>Equipment ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Global_Change_Assessments_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Change Assessments Closed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Impacted_Sites__c</fullName>
        <label>Impacted Sites</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Site 1</fullName>
                </value>
                <value>
                    <fullName>Site 2</fullName>
                </value>
                <value>
                    <fullName>Site 3</fullName>
                </value>
                <value>
                    <fullName>Material 1</fullName>
                    <isActive>false</isActive>
                    <label>Material 1</label>
                </value>
                <value>
                    <fullName>Material 2</fullName>
                    <isActive>false</isActive>
                    <label>Material 2</label>
                </value>
                <value>
                    <fullName>Material3</fullName>
                    <isActive>false</isActive>
                    <label>Material3</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Implemented_As_Planned__c</fullName>
        <label>Implemented As Planned?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Justification__c</fullName>
        <label>Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Material_Affected__c</fullName>
        <label>Material Affected?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Material_Comment__c</fullName>
        <label>Material Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Material_Lot_Number_s__c</fullName>
        <label>Material Lot Number(s)</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Material_Number__c</fullName>
        <label>Material Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Product_Affected__c</fullName>
        <label>Product Affected?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Product_Comment__c</fullName>
        <label>Product Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Product_Lot_Number_s__c</fullName>
        <label>Product Lot Number(s)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Product_Number__c</fullName>
        <label>Product Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>CMPL123__Product__c</referenceTo>
        <relationshipLabel>Global Change Controls</relationshipLabel>
        <relationshipName>Global_Change_Controls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Proposed_State__c</fullName>
        <label>Proposed State</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Global Change Control</label>
    <listViews>
        <fullName>CMPL123QMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GCC-{00000}</displayFormat>
        <label>Global Change Control Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Global Change Controls</pluralLabel>
    <recordTypes>
        <fullName>CMPL123QMS__Default_Layout</fullName>
        <active>true</active>
        <label>Default Layout</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CMPL123QMS__Due_Date_ValidationGlobal_Change_Control</fullName>
        <active>true</active>
        <errorConditionFormula>AND( CMPL123QMS__Due_Date__c &lt; TODAY(), OR( ISNEW(), ISCHANGED(CMPL123QMS__Due_Date__c)))</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Due_Date__c</errorDisplayField>
        <errorMessage>Due Dates cannot be populated with a date in the past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123QMS__Global_Change_Control_Device_Comment</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISPICKVAL(CMPL123QMS__Device_Affected__c, "Yes"), ISBLANK(CMPL123QMS__Device_Comment__c),False )</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Device_Comment__c</errorDisplayField>
        <errorMessage>Device Comment is required when Devices Affected? is populated with a value of Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123QMS__Global_Change_Control_Document_Comment</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL( CMPL123QMS__Documents_Affected__c, "Yes"), ISBLANK(  CMPL123QMS__Document_Comment__c),False )</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Document_Comment__c</errorDisplayField>
        <errorMessage>Document Comment is required when Documents Affected? is populated with a value of Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123QMS__Global_Change_Control_Equipment_Comment</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(CMPL123QMS__Equipment_Affected__c , "Yes"), ISBLANK(  CMPL123QMS__Equipment_Comment__c),False )</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Equipment_Comment__c</errorDisplayField>
        <errorMessage>Equipment Comment is required when Equipment Affected? is populated with a value of Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123QMS__Global_Change_Control_Material_Comment</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(    CMPL123QMS__Material_Affected__c, "Yes"), ISBLANK( CMPL123QMS__Material_Comment__c),False )</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Material_Comment__c</errorDisplayField>
        <errorMessage>Material Comment is required when Materials Affected? is populated with a value of Yes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CMPL123QMS__Global_Change_Control_Product_Comment</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISPICKVAL(  CMPL123QMS__Product_Affected__c, "Yes"), ISBLANK(  CMPL123QMS__Product_Comment__c),False )</errorConditionFormula>
        <errorDisplayField>CMPL123QMS__Product_Comment__c</errorDisplayField>
        <errorMessage>Product Comment is required when Products Affected? is populated with a value of Yes.</errorMessage>
    </validationRules>
</CustomObject>